test/should-pass/fail/read-only-klass-ptrs-hashed-set/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass hashed-set;

int-t main()
{
  hashed-set::klass = nullptr; // this should fail

  return 0;
}
